# f1rstc0urse

./: .github.yml  README.md
projects/: Cmakelists.txt
projects/lab10/: Cmakelists.txt  log.txt
projects/lab11/: Cmakelists.txt
projects/lab12/: Cmakelists.txt
projects/lab13/: Cmakelists.txt  log.txt
projects/lab14/: Cmakelists.txt  main.cpp
projects/lab15/: Cmakelists.txt  main.cpp
projects/lab16/: Cmakelists.txt
projects/lab17/: Cmakelists.txt
projects/lab18/: Cmakelists.txt  main.cpp
projects/lab19/: Cmakelists.txt  main.cpp
projects/lab20/: Cmakelists.txt  log.txt  main.cpp
projects/lab21/: Cmakelists.txt  log.txt
projects/lab3/: Cmakelists.txt  calculator.cpp  calculator.h  main.cpp
projects/lab4/: Cmakelists.txt  log.txt  main.cpp
projects/lab5/: CMakeLists.txt
projects/lab6/: Cmakelists.txt  log.txt  main.cpp
projects/lab7/: Cmakelists.txt  log.txt  main.cpp
projects/lab8/: Cmakelists.txt  log.txt  main.cpp
projects/lab9/: Cmakelists.txt
tests/: CMakeLists.txt
tests/boost/: CMakeLists.txt
tests/boost/common_math_tests/: CMakeLists.txt
tests/boost/common_math_tests/src/: common_math_test_suite.cpp  macros_test_suite.cpp
tests/gtests/: CMakeLists.txt
tests/gtests/array_tests/: CMakeLists.txt  array_test.cpp
